crates/solidity/testing/snapshots/bindings_output/events/named_args/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Equal or Semicolon.
    ╭─[input.sol:10:17]
    │
 10 │         emit Log({message: "testing", level: Severity.Info});
    │                 ──────────────────────┬─────────────────────  
    │                                       ╰─────────────────────── Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── def: 1
  2 │     enum Severity { Info, Error }
    │          ────┬───   ──┬─  ──┬──  
    │              ╰─────────────────── def: 2
    │                       │     │    
    │                       ╰────────── def: 3
    │                             │    
    │                             ╰──── def: 4
    │ 
  4 │     event Log (
    │           ─┬─  
    │            ╰─── def: 5
  5 │         Severity level,
    │         ────┬─── ──┬──  
    │             ╰─────────── ref: 2
    │                    │    
    │                    ╰──── def: 6
  6 │         string message
    │                ───┬───  
    │                   ╰───── def: 7
    │ 
  9 │     function test() {
    │              ──┬─  
    │                ╰─── def: 8
 10 │         emit Log({message: "testing", level: Severity.Info});
    │         ──┬─ ─┬─  
    │           ╰─────── unresolved
    │               │   
    │               ╰─── def: 9
────╯
